adição de som nos botoes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="instrucoes.js"></script>
     <script src="creditos.js"></script>
     <script src="tela_da_vitoria.js"></script>
-    <script src="opcoes.js"></script>
+    <script src="botoes.js"></script>
     
   </body>
 </html>
